--- a/VidlyAuth/VidlyAuth.csproj
+++ b/VidlyAuth/VidlyAuth.csproj
@@ -209,6 +209,18 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\favicon.png" />
+    <Content Include="Content\Images\office.jpg" />
+    <Content Include="Content\Images\parallax1.jpg" />
+    <Content Include="Content\Images\parallax2.jpg" />
+    <Content Include="Content\Images\profile-picture.jpg" />
+    <Content Include="Content\Images\sample-1.jpg" />
+    <Content Include="Content\Images\yuna.jpg" />
+    <Content Include="Content\materializecss\css\materialize.css" />
+    <Content Include="Content\materializecss\css\materialize.min.css" />
+    <Content Include="Content\materializecss\custom.css" />
+    <Content Include="Content\materializecss\js\materialize.js" />
+    <Content Include="Content\materializecss\js\materialize.min.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -218,6 +230,8 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\materializecss\LICENSE" />
+    <Content Include="Content\materializecss\README.md" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -263,9 +277,13 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Shared\_Navbar.cshtml" />
+    <Content Include="Views\Shared\_Footer.cshtml" />
+    <Content Include="Views\Shared\_Sidebar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\materializecss\fonts\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
