--- a/VidlyAuth/VidlyAuth.csproj
+++ b/VidlyAuth/VidlyAuth.csproj
@@ -249,6 +249,10 @@
     <Compile Include="Migrations\201804170815350_PopulateGenders.Designer.cs">
       <DependentUpon>201804170815350_PopulateGenders.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804181015194_SeedUsers.cs" />
+    <Compile Include="Migrations\201804181015194_SeedUsers.Designer.cs">
+      <DependentUpon>201804181015194_SeedUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CustomDateTimeValid.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -256,6 +260,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\MembershipTypeGroup.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="ViewModels\CustomerFormViewModel.cs" />
@@ -583,6 +588,8 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Customers\ReadOnlyCustomerForm.cshtml" />
+    <Content Include="Views\Customers\ReadOnlyIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -625,6 +632,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201804170815350_PopulateGenders.resx">
       <DependentUpon>201804170815350_PopulateGenders.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804181015194_SeedUsers.resx">
+      <DependentUpon>201804181015194_SeedUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
